--- a/package.json
+++ b/package.json
@@ -5,8 +5,12 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "lint": "eslint"
+    "start": "echo 'Static site'",
+    "lint": "eslint .",
+    "postinstall": "npm run build"  
+  },
+  "engines": {
+    "node": "18.x"
   },
   "dependencies": {
     "@react-spring/web": "^10.0.3",
